# WavAgent

./: .gitignore  CMakeLists.txt  README.md  WavAgent.cpp
.circleci/: config.yml
data/: WAV-44100Hz-1ch-16bit-4410Hz_square.txt  dummy2.txt
design/: WavAgentClassDiagram.drawio
libsources/: MetaData.cpp  MetaData.h  SampleDataTypeDefinitions.cpp  SampleDataTypeDefinitions.h  SampleFormatType.cpp  SampleFormatType.h  SoundData.cpp  SoundData.h  WavAgent.cpp  WavAgent.h  WavAgentErrorCode.cpp  WavAgentErrorCode.h
sources/: main.cpp
tests/: CMakeLists.txt
tests/sources/: SampleSigned24bitTest.cpp  WavAgentErrorCodeTest.cpp  WavAgentTest.cpp  hello_test.cpp
